syntax = "proto3";

package api.v2;

option java_package = "com.cognite.data.api.v2";
option csharp_namespace = "Cognite.Data.Api.V2";
option java_multiple_files = true;

message StringDatapoint {
  int64 timestamp = 1;
  string value = 2;
}

message NumericDatapoint {
  int64 timestamp = 1;
  double value = 2;
}

message StringTimeseriesData {
  repeated StringDatapoint points = 1;
}

message NumericTimeseriesData {
  repeated NumericDatapoint points = 1;
}

message TimeseriesData {
  oneof data {
    StringTimeseriesData stringData = 1;
    NumericTimeseriesData numericData = 2;
  }
}

message NamedTimeseriesData {
  string name = 1;
  oneof data {
    StringTimeseriesData stringData = 2;
    NumericTimeseriesData numericData = 3;
  }
}

message MultiNamedTimeseriesData {
  repeated NamedTimeseriesData namedTimeseriesData = 1;
}
